Refactor various classes. Remove unused logtype param